# summer_practice

./: .gitignore  CMakeLists.txt  SummerPractice.7z
.github/workflows/: cmake-multi-platform.yml
app/: CMakeLists.txt
app/src/: main.cpp
libs/core/: CMakeLists.txt
libs/core/include/: core.h
libs/core/src/: core.cpp
libs/utils/: CMakeLists.txt
libs/utils/include/: utils.h
libs/utils/src/: utils.cpp
tests/: CMakeLists.txt
tests/include/: test_cout.h
tests/src/: test.cpp  tests.cpp
