cmake_minimum_required(VERSION 3.26.0)
set(CMAKE_CXX_STANDARD 17)
project(SummerPractice CXX)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
set(CMAKE_INSTALL_RPATH "$ORIGIN")
add_subdirectory(libs/core)
add_subdirectory(libs/utils)
add_subdirectory(app)
include(CTest)
enable_testing()
add_subdirectory(tests)