cmake_minimum_required(VERSION 3.26.0)
set(CMAKE_CXX_STANDARD 17)
project(SummerPractice CXX)
set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
set(CMAKE_INSTALL_RPATH "$ORIGIN")
set(lib_path lib)
set(bin_path bin)
set(path_include include)
add_subdirectory(libs/core)
add_subdirectory(libs/utils)
add_subdirectory(app)
include(CTest)
enable_testing()
add_subdirectory(tests)
set(libs core utils)
if(TARGET MyApp)
    list(APPEND libs)
endif()



